<resources>
    <string name="app_name">DailyDietTrackingApp</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="welcome_adm">Welcome Admin</string>
    <string name="users">Users</string>
    <string name="adding_diet_tips">Adding Diet Tips</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome_user">Welcome User1</string>
    <string name="adding_diet_tip">Adding diet tips</string>
    <string name="enter_title">Enter Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="view_dietart_tips">View Dietart Tips</string>

    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="login_or_register">Login or Register</string>
    <string name="continue_next">Continue</string>
    <string name="coninue_next">Coninue</string>
</resources>