<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomAdmin">

    <TextView
        android:id="@+id/welAdminTextView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textSize="30sp"
        android:text="@string/welcome_adm"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/usersButton"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/users"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welAdminTextView"
        />
    <Button
        android:id="@+id/addDietTipsButton"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/adding_diet_tips"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersButton"
        />
    <Button
        android:id="@+id/viewDietTipsButton"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/view_diet_tips"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDietTipsButton"
        />

    <TextView
        android:id="@+id/signOutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_out"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>